--- a/Lab 06/README
+++ b/Lab 06/README
@@ -1,1 +1,5 @@
-[Soal Lab 6.pdf](https://github.com/MartinTarigan/DDP1-2022/files/10564321/Soal.Lab.6.pdf)
+![Soal Lab 6-page-001](https://user-images.githubusercontent.com/113441970/216220479-606825db-911e-4f3a-8b9e-a6ba74a008b7.jpg)
+![Soal Lab 6-page-002](https://user-images.githubusercontent.com/113441970/216220487-3d1da06c-40c8-4c47-8fe3-637110043430.jpg)
+![Soal Lab 6-page-003](https://user-images.githubusercontent.com/113441970/216220489-433ce00b-563a-4c71-a313-73e0ec4beadb.jpg)
+![Soal Lab 6-page-004](https://user-images.githubusercontent.com/113441970/216220493-bf82636b-9b63-4ef8-a9be-b668b1db1d0c.jpg)
+![Soal Lab 6-page-005](https://user-images.githubusercontent.com/113441970/216220496-5d93d778-27b9-41f0-8567-498c6654b135.jpg)
