--- a/Lab 06/README
+++ b/Lab 06/README
@@ -1,1 +1,1 @@
-![Soal Lab 6-page-001](https://user-images.githubusercontent.com/113441970/216221049-d9e740e6-bbcc-41cf-8c42-1da3ab6eecc4.jpg)
+![Soal Lab 6-page-001](https://raw.githubusercontent.com/MartinTarigan/DDP1-2022/main/Lab%2006/README)
